Fix report spacing to hide visibility of bottom scrollbar

--- a/src/styles/Report.css
+++ b/src/styles/Report.css
@@ -4,12 +4,14 @@
   justify-content: flex-start;
   gap: 0.5rem;
   width: 100%;
+  height: calc(100% + 15px);
 }
 
 .report ul {
   margin: 0;
-  padding: 0 1rem 0 .5rem;
+  padding: 0 1rem 2rem .5rem;
   overflow: scroll;
+  height: 100%;
 }
 
 .report-empty {
